--- a/app/templates/tasks.html
+++ b/app/templates/tasks.html
@@ -15,6 +15,7 @@
             </div>
         </div>
         </a>
+        <a href="{% url 'sopautomation' %}" class="card-link">
         <div class="card">
             <div class="card-image">
                 <img src="/media/task_images/SOP Automation.jpg" alt="SOP Automation">
@@ -24,7 +25,7 @@
                 <p>Short description of task 2</p>
             </div>
         </div>
-
+        </a>
         <div class="card">
             <div class="card-image">
                 <img src="/media/task_images/AccountingMigration.jpg" alt="Accounting Migration">
